[package]
name = "rusty-whsp"
description = "A Rust library designed to handle configuration parsing for command-line applications"
author = "Bufferization"
version = "0.1.6"
license = "MIT"
repository = "https://github.com/rusty-libraries/rusty-whsp"
homepage = "https://rusty-libraries.github.io/rusty-whsp/#/"
keywords = ["console", "cli", "configuration", "parsing", "terminal"]
categories = ["command-line-utilities", "command-line-interface", "parser-implementations", "parsing"]
exclude = ["docs/", "rustfmt.toml"]
readme = "README.md"
edition = "2021"